--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,14 @@
+html,body,#root,#App{
+  height: 100% !important;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+}
+
+path{
+  stroke: white;
+  stroke-width:2px;
 }
