--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,4 @@
-html,body,#root,#App{
+html,body,#root,#App,svg{
   height: 100% !important;
 }
 
@@ -11,4 +11,5 @@ body {
 path{
   stroke: white;
   stroke-width:2px;
+  transition: fill 0.4s, opacity 0.2s;
 }
