--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,31 @@
+html, body,#root {
+    height:100%;
+    margin:0;
+}
 
+.app {
+    height:100%;
+    display:flex;
+    display: -webkit-flex;
+    flex-direction: row;
+    -webkit-flex-direction: row;
+    -webkit-align-content: stretch;
+    align-content: stretch;
+}
 
-path{
-  stroke: white;
-  stroke-width:2px;
-  transition: fill 0.4s, opacity 0.2s;
+.main-container {
+   -webkit-flex: 1;
+   flex:1;
+   position:relative;
+}
+
+.child {
+    position:absolute;
+    width:100%;
+    height:100%;
+}
+
+.scrollable {
+     overflow-y:auto;
+   	-webkit-overflow-scrolling:touch;
 }
